testsuite/tests/grammar/invalid_lkt/transform_invalid_node.lkt
import lexer_example
import nodes

@with_lexer(foo_lexer) grammar foo_grammar {
    @main_rule main_rule <- NoSuchNode("example")
}
